D8-177 Stop main content area from collapsing in IE

--- a/css/layout.css
+++ b/css/layout.css
@@ -4,16 +4,18 @@
  */
 
 /* --- Push the footer down --- */
- html,
- body {
+html,
+body {
   height: 100%; 
- }
+}
 
- body {
+body {
   display: flex;
   flex-direction: column;
- }
+}
 
- .isu-main {
+.isu-main {
   flex-grow: 1;
- }
+  flex-shrink: 0;
+  flex-basis: auto;
+}
